; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/ia64/extr_ia64.c_ia64_handle_option.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/ia64/extr_ia64.c_ia64_handle_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pta = type { i8*, i32 }
%struct.pta.0 = type { i8*, i32 }

@.str = private unnamed_addr constant [40 x i8] c"bad value %<%s%> for -mtls-size= switch\00", align 1
@ia64_handle_option.processor_alias_table = internal constant [5 x %struct.pta] [%struct.pta { i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i32 0, i32 0), i32 129 }, %struct.pta { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i32 0, i32 0), i32 129 }, %struct.pta { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i32 0, i32 0), i32 129 }, %struct.pta { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i32 0, i32 0), i32 128 }, %struct.pta { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i32 0, i32 0), i32 128 }], align 16
@.str.1 = private unnamed_addr constant [8 x i8] c"itanium\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"itanium1\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"merced\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"itanium2\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"mckinley\00", align 1
@ia64_tune = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [36 x i8] c"bad value %<%s%> for -mtune= switch\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i8*, i32)* @ia64_handle_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ia64_handle_option(i64 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i64, i64* %5, align 8
  switch i64 %10, label %60 [
    i64 132, label %11
    i64 131, label %14
    i64 130, label %27
  ]

11:                                               ; preds = %3
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @fix_range(i8* %12)
  store i32 1, i32* %4, align 4
  br label %61

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 14
  br i1 %16, label %17, label %26

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = icmp ne i32 %18, 22
  br i1 %19, label %20, label %26

20:                                               ; preds = %17
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 64
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @error(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %24)
  br label %26

26:                                               ; preds = %23, %20, %17, %14
  store i32 1, i32* %4, align 4
  br label %61

27:                                               ; preds = %3
  %28 = call i32 @ARRAY_SIZE(%struct.pta.0* bitcast ([5 x %struct.pta]* @ia64_handle_option.processor_alias_table to %struct.pta.0*))
  store i32 %28, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %29

29:                                               ; preds = %49, %27
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %52

33:                                               ; preds = %29
  %34 = load i8*, i8** %6, align 8
  %35 = load i32, i32* %9, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds [5 x %struct.pta], [5 x %struct.pta]* @ia64_handle_option.processor_alias_table, i64 0, i64 %36
  %38 = getelementptr inbounds %struct.pta, %struct.pta* %37, i32 0, i32 0
  %39 = load i8*, i8** %38, align 16
  %40 = call i32 @strcmp(i8* %34, i8* %39)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %48, label %42

42:                                               ; preds = %33
  %43 = load i32, i32* %9, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds [5 x %struct.pta], [5 x %struct.pta]* @ia64_handle_option.processor_alias_table, i64 0, i64 %44
  %46 = getelementptr inbounds %struct.pta, %struct.pta* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 8
  store i32 %47, i32* @ia64_tune, align 4
  br label %52

48:                                               ; preds = %33
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %9, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %9, align 4
  br label %29

52:                                               ; preds = %42, %29
  %53 = load i32, i32* %9, align 4
  %54 = load i32, i32* %8, align 4
  %55 = icmp eq i32 %53, %54
  br i1 %55, label %56, label %59

56:                                               ; preds = %52
  %57 = load i8*, i8** %6, align 8
  %58 = call i32 @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.6, i64 0, i64 0), i8* %57)
  br label %59

59:                                               ; preds = %56, %52
  store i32 1, i32* %4, align 4
  br label %61

60:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %61

61:                                               ; preds = %60, %59, %26, %11
  %62 = load i32, i32* %4, align 4
  ret i32 %62
}

declare dso_local i32 @fix_range(i8*) #1

declare dso_local i32 @error(i8*, i8*) #1

declare dso_local i32 @ARRAY_SIZE(%struct.pta.0*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
